# SpectroNote

./: Readme.md  pyproject.toml  readme.md
SpectroNote/: SpectroNote.py  __init__.py  __main__.py  spectronote.py
SpectroNote/Resources/Shaders/: SpectroNote.frag
Website/easy/: install.md
Website/get/: index.md
Website/quick/: install.md
spectronote/: __init__.py  __main__.py  scene.py  spectronote.py
spectronote/resources/: shader.frag  spectronote.glsl
spectronote/resources/shaders/: spectronote.frag
website/: CNAME
website/easy/: examples.md  install.md
website/quick/: install.md
