[project.urls]
GitHub    = "https://github.com/BrokenSource/SpectroNote"
Changelog = "https://brokensrc.dev/about/changelog"
Funding   = "https://brokensrc.dev/about/sponsors"
Contact   = "https://brokensrc.dev/about/contact"
Download  = "https://brokensrc.dev/get/releases"
Docs      = "https://brokensrc.dev/spectronote"
Homepage  = "https://brokensrc.dev"

[project]
name        = "spectronote"
description = "🎧 Piano-perfect audio spectrogram. Unlock a hidden absolute pitch in you."
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
dynamic     = ["version"]
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source @ git+https://github.com/BrokenSource/BrokenSource",
    "shaderflow @ git+https://github.com/BrokenSource/ShaderFlow",
]

[project.scripts]
spectronote = "spectronote.__main__:main"
spectro     = "spectronote.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spectronote"]

[tool.hatch.metadata.hooks.custom]
path = ".github/hatch_build.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["*"]
