[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/SpectroNote"
Changelog = "https://brokensrc.dev/about/changelog"
Contact   = "https://brokensrc.dev/about/contact"
Download  = "https://brokensrc.dev/get/releases"
Docs      = "https://brokensrc.dev/spectronote"
Homepage  = "https://brokensrc.dev"

[project]
name        = "spectronote"
description = "🎧 Piano-perfect audio spectrogram. Unlock a hidden absolute pitch in you."
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "0.9.2"
readme      = ".github/readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source @ git+https://github.com/BrokenSource/BrokenSource",
    "shaderflow @ git+https://github.com/BrokenSource/ShaderFlow",
]

[project.scripts]
spectronote = "spectronote.__main__:main"
spectro     = "spectronote.__main__:main"

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["spectronote"]

[tool.hatch.metadata]
allow-direct-references = true
