[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/SpectroNote"
Changelog = "https://spectro.brokensrc.dev/about/changelog"
Download  = "https://spectro.brokensrc.dev/get/releases"

[project]
name        = "spectronote"
description = "🎧 Piano-perfect audio spectrogram"
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "0.10.0"
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "shaderflow @ git+https://github.com/BrokenSource/ShaderFlow",
    "dearlog @ git+https://github.com/BrokenSource/DearLog",
]

[project.scripts]
spectronote = "spectronote.__main__:main"
spectro     = "spectronote.__main__:main"

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["spectronote"]

[tool.hatch.metadata]
allow-direct-references = true
